--- a/styles/globals.css
+++ b/styles/globals.css
@@ -151,14 +151,16 @@ button:active{
 @media only screen and (max-width: 768px) {
   .loginPage{
     flex-direction: column;
-    min-height: 100%;
+    min-height: 210%;
     width: 100%;
     align-items: center;
     top: 0%;
     left: 0%;
   }
   .login, div.loginVideo{
+    position: absolute;
     width: 100%;
+    height: 100%;
   }
   .loginLink{
     width: 100%;
@@ -168,16 +170,13 @@ button:active{
     width: 30%;
     box-shadow: 0px 0px 5px 1px black;
   }
-  .loginHeading{
+  .login{
     position: absolute;
+    width: 100%;
     top: 1%;
-    width: 100%;
   }
-  .loginForm{
-    position: absolute;
-    width: 100%;
-    min-height: 50%;
-    top: 10%;
+  div.loginVideo{
+    top: 102%;
   }
   .account{
     flex-direction: column;
