--- a/styles/globals.css
+++ b/styles/globals.css
@@ -151,7 +151,7 @@ button:active{
 @media only screen and (max-width: 768px) {
   .loginPage{
     flex-direction: column;
-    min-height: 210%;
+    min-height: 300%;
     width: 100%;
     align-items: center;
     top: 0%;
@@ -169,6 +169,7 @@ button:active{
     text-align: center;
     width: 90%;
     box-shadow: 0px 0px 5px 1px black;
+    padding: 9% 3%;
   }
   .login{
     position: absolute;
